# Fract-ol

./: Makefile  README.md  fract-ol  fractol  libfractol.h  suppressions.supp
MLX42/: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
MLX42/.github/ISSUE_TEMPLATE/: bug_report.md
MLX42/.github/workflows/: wasm.yml
MLX42/docs/: 42.md  Basics.md  Colors.md  Functions.md  Hooks.md  Images.md  Textures.md  XPM42.md  index.md
MLX42/include/MLX42/: MLX42.h  MLX42_Int.h
MLX42/include/glad/: glad.h
MLX42/include/lodepng/: lodepng.h
MLX42/lib/png/: lodepng.c
MLX42/shaders/: default.vert
MLX42/src/: mlx_exit.c  mlx_images.c  mlx_loop.c  mlx_window.c
MLX42/src/font/: font.h
MLX42/src/textures/: mlx_xpm42.c
MLX42/tests/: CMakeLists.txt  WindowFixture.hpp  tests.cpp
MLX42/tools/: compile_shader.bat  compile_shader.sh  xpm3_conv.py
MLX42/web/: README.md  demo.js  index.html
include/: fractol.h
libft/: README.md  libft.h
libft/src/: ft_atoi.c  ft_clean_double.c  ft_freedouble.c  ft_freedouble_array.c  ft_strclean.c  ft_strtol.c  ft_strtol_utils.c
libft/src/d_get_next_line/: get_next_line.c  get_next_line_bonus.c  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/src/d_lists/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/src/d_printf/: printf_string.c
libft/src/d_strings/: ft_strchr.c  ft_strisnumber.c  ft_strlen.c
src/: color.c  control.c  draw.c  fractol_color.c  fractol_error.c  fractol_hooks.c  fractol_parser.c  fractol_render.c  free.c  handlers.c  julia.c  keyboard_mouse_window.c  main.c  mandelbrot.c  render.c  shapes.c  utils.c
